Reconfigure auth and context a bunch
